# fernwright-mcp

./: Cargo.toml  README.md
extension/: manifest.json  options.html  options.js  popup.html  popup.js  service_worker.js
src/: bridge.rs  config_export.rs  main.rs  mcp.rs  mcp_http.rs  mcp_server.rs  search.rs  search_service.rs
