[package]
name = "playright-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
arboard = "3"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
rmcp = { version = "1.1", features = [
    "transport-io",
    "transport-streamable-http-server",
] }
regex = "1.11"
scraper = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
tokio-util = "0.7"
tokio-tungstenite = "0.26"
tray-icon = { version = "0.21", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2.5"
winit = "0.30"
resvg = { version = "0.45", default-features = false }
usvg = { version = "0.45", default-features = false, features = ["text"] }
